# wc3-to-sc2-converter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  START_HERE.txt  actor_gen.py  auto_updater.py  blender_manager.py  blp.py  build.bat  build_m3.py  cleanup.bat  config.example.json  config_schema.json  convert.py  diagnostics.py  discovery.py  fuzzy_anims.py  healer.py  lod_gen.py  m3_validator.py  main_window.py  mdx.py  mdx_cache.py  mpq_reader.py  normal_map_gen.py  preview.py  pyproject.toml  pyrightconfig.json  team_color_mask.py  textures.py  wc3toSC2.spec  web_converter.py
.github/workflows/: build.yml  ci.yml
examples/Naaru/: Naaru.json
plans/: v2-architecture.md  v2-expansion-roadmap.md  v2-gui-architecture.md  v3-gap-analysis.md
presets/: buildings.json  default.json  effects.json  human_units.json
tests/: conftest.py  test_blp.py  test_mdx.py  test_textures.py  test_v2_engine.py  test_v3_engine.py
