[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "wc3toSC2"
version = "1.0.0"
description = "Convert Warcraft 3 .mdx models to StarCraft 2 .m3 models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
]

[project.scripts]
wc3toSC2 = "convert:main"

[project.urls]
Homepage = "https://github.com/RogerRoger29/wc3-to-sc2-converter"
Issues = "https://github.com/RogerRoger29/wc3-to-sc2-converter/issues"

[tool.setuptools]
py-modules = ["convert", "mdx", "blp", "textures", "build_m3"]

[tool.setuptools.package-data]
"*" = ["config_schema.json", "config.example.json"]
